# spotify-web-app

./: .gitignore  pyproject.toml
backend/api/: views.py
backend/backend/: settings.py  urls.py
