[tool.poetry]
name = "spotify-web-app"
version = "0.1.0"
description = ""
authors = ["Roman Pomazan <romapomazan1310@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.1"
python-dotenv = "^1.0.1"
redis = {extras = ["hiredis"], version = "^5.0.8"}
spotipy = "^2.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
